--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ p {
 
 /*FOR TABLETS*/
 
-@media (min-device-width: 768px) {
+@media (min-width: 768px) {
   h1{
     color: #02cbd2;
   }
@@ -41,7 +41,7 @@ p {
 
 /*FOR DESKTOPS*/
 
-@media (min-device-width: 1200px) {
+@media (min-width: 1200px) {
   h1 {
     color: #6e4b61;
   }
